--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -392,7 +392,7 @@ QComboBox {
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="currentIndex">
-         <number>2</number>
+         <number>3</number>
         </property>
         <widget class="QWidget" name="homePage"/>
         <widget class="QWidget" name="dogSheetsPage"/>
@@ -595,6 +595,59 @@ color:#212834;</string>
               <string/>
              </property>
             </column>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="editPage">
+         <layout class="QVBoxLayout" name="verticalLayout_3">
+          <item>
+           <widget class="QStackedWidget" name="editStacked">
+            <widget class="QWidget" name="editEntryPage">
+             <layout class="QVBoxLayout" name="verticalLayout_4">
+              <item>
+               <widget class="QTabWidget" name="entryTabWidget">
+                <property name="currentIndex">
+                 <number>0</number>
+                </property>
+                <widget class="QWidget" name="entryTab1">
+                 <attribute name="title">
+                  <string>Entrée</string>
+                 </attribute>
+                </widget>
+                <widget class="QWidget" name="entryTab2">
+                 <attribute name="title">
+                  <string>Animal</string>
+                 </attribute>
+                </widget>
+                <widget class="QWidget" name="entryTab3">
+                 <attribute name="title">
+                  <string>Sortie</string>
+                 </attribute>
+                </widget>
+               </widget>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_2">
+                <item>
+                 <widget class="QPushButton" name="cancelButton">
+                  <property name="text">
+                   <string>Annuler</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="submitButton">
+                  <property name="text">
+                   <string>Valider</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+             </layout>
+            </widget>
+            <widget class="QWidget" name="editCarePage"/>
            </widget>
           </item>
          </layout>
