--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -76,7 +76,7 @@
     <item>
      <widget class="MenuTree" name="menuTree">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
