--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -392,7 +392,7 @@ QComboBox {
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="currentIndex">
-         <number>2</number>
+         <number>3</number>
         </property>
         <widget class="QWidget" name="homePage"/>
         <widget class="QWidget" name="dogSheetsPage"/>
@@ -610,7 +610,7 @@ color:#212834;</string>
                 <item>
                  <widget class="QTabWidget" name="entryTabWidget">
                   <property name="currentIndex">
-                   <number>0</number>
+                   <number>2</number>
                   </property>
                   <widget class="QWidget" name="entryTab1">
                    <attribute name="title">
@@ -618,7 +618,11 @@ color:#212834;</string>
                    </attribute>
                    <layout class="QGridLayout" name="gridLayout">
                     <item row="0" column="1">
-                     <widget class="QDateEdit" name="entryDateEdit"/>
+                     <widget class="QDateEdit" name="entryDateEdit">
+                      <property name="currentSectionIndex">
+                       <number>0</number>
+                      </property>
+                     </widget>
                     </item>
                     <item row="8" column="1" colspan="2">
                      <widget class="QLineEdit" name="emailAbandonEdit">
